--- a/src/componente/Calculadora.module.css
+++ b/src/componente/Calculadora.module.css
@@ -58,8 +58,23 @@ input::placeholder {
   margin: 0.5em;
 }
 .botoes {
-  text-align: center;
-  font-size: 25px;
+  display: flex;
+  justify-content: center;
+  padding: 0 1em 0 1em ;
+}
+.botaoCalcular {
+  font-size: 1.5em;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  border: none;
+  background: rgb(47, 37, 189);
+  border-radius: 25px;
+  padding: .5em 2em;
+  color: white;
+}
+.botaoCalcular:hover{
+  background-color: blue;
+  transform: scale(1.2);
 }
 .resultado {
   padding-bottom: 1em;
