moodificando para contrução

--- a/src/componente/Calculadora.module.css
+++ b/src/componente/Calculadora.module.css
@@ -60,7 +60,7 @@ input::placeholder {
 .botoes {
   display: flex;
   justify-content: center;
-  padding: 0 1em 0 1em ;
+  padding: 0 1em 0 1em;
 }
 .botaoCalcular {
   font-size: 1.5em;
@@ -69,10 +69,10 @@ input::placeholder {
   border: none;
   background: rgb(47, 37, 189);
   border-radius: 25px;
-  padding: .5em 2em;
+  padding: 0.5em 2em;
   color: white;
 }
-.botaoCalcular:hover{
+.botaoCalcular:hover {
   background-color: blue;
   transform: scale(1.2);
 }
