--- a/src/componente/Calculadora.module.css
+++ b/src/componente/Calculadora.module.css
@@ -1,28 +1,21 @@
-html {
-  background-color: #95949d;
+html{
+  background-color: rgb(255, 255, 255);
 }
 h1 {
-  font-size: 1.5em;
-  font-weight: bold;
+  font-size: 1.2em;
   text-align: center;
   margin: 0.5em 0 0.5em 0;
+  color: #303F4D;
 }
 label {
   display: block;
   color: rgb(48, 63, 77);
-  font-family: Lato, sans-serif;
-  font-size: 1.4em;
-  font-weight: 300;
+  font-size: 1em;
+  font-weight: 400;
   margin: 0.5em 0;
 }
 main {
-  background: white;
-  border-radius: 5px;
   padding: 1.5em;
-  width: 80%;
-  margin: 2em auto 2em auto;
-  color: rgb(1, 24, 24);
-  box-shadow: 5px 5px 10px rgb(0 0 0 / 57%);
 }
 
 form {
@@ -32,15 +25,13 @@ form {
 }
 input {
   width: 40%;
-  padding: 0.9em;
+  padding: 0.7em .9em;
   border: 1px solid rgb(213, 214, 219);
   border-radius: 5px;
-  font-family: Lato, sans-serif;
-  font-size: 15px;
-  color: rgb(73, 80, 87);
+  text-align: center;
 }
 input::placeholder {
-  font-size: 1.3em;
+  font-size: 1em;
   text-align: center;
 }
 .tabela {
@@ -63,13 +54,12 @@ input::placeholder {
   padding: 0 1em 0 1em;
 }
 .botaoCalcular {
-  font-size: 1.5em;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: 400;
+  font-size: 1em;
+  font-weight: 500;
   border: none;
   background: rgb(47, 37, 189);
-  border-radius: 25px;
-  padding: 0.5em 2em;
+  border-radius: 5px;
+  padding: .6em 8em;
   color: white;
 }
 .botaoCalcular:hover {
@@ -78,7 +68,7 @@ input::placeholder {
 }
 .resultado {
   padding-bottom: 1em;
-  font-size: 1.4em;
+  font-size: .9em;
   text-align: center;
 }
 
