--- a/src/componente/header/Header.module.css
+++ b/src/componente/header/Header.module.css
@@ -1,6 +1,11 @@
+.fundoCapa {
+  padding: 1em 0;
+  box-shadow: rgb(0 0 0 / 16%) 0px 1px 2px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
 .perfilFoto {
-  width: 10em;
+  width: 3.5em;
   display: block;
-  margin-left: 1em;
-  padding-top: 1em;
 }
