--- a/src/componente/Calculadora.module.css
+++ b/src/componente/Calculadora.module.css
@@ -38,12 +38,14 @@ input::placeholder {
   flex-direction: row;
   justify-content: center;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   padding: 1em 0;
 }
 .medidas {
   display: flex;
-  margin: 0.5em;
+  margin: .5em;
+  width: 40%;
+  padding: .8em 2em;
 }
 .tituloMedidas {
   margin: 0.5em;
@@ -59,7 +61,7 @@ input::placeholder {
   border: none;
   background: rgb(47, 37, 189);
   border-radius: 5px;
-  padding: .6em 8em;
+  padding: .6em 7em;
   color: white;
 }
 .botaoCalcular:hover {
@@ -68,13 +70,6 @@ input::placeholder {
 }
 .resultado {
   padding-bottom: 1em;
-  font-size: .9em;
+  font-size: 1.1em;
   text-align: center;
 }
-
-/* pc */
-/* .tabela{
-    display: flex;
-    align-items: flex-start;
-    flex-direction: column;
-} */
