--- a/src/componente/header/Header.module.css
+++ b/src/componente/header/Header.module.css
@@ -1,11 +1,12 @@
 .fundoCapa {
-  padding: 1em 0;
+  padding: 1em 1em;
   box-shadow: rgb(0 0 0 / 16%) 0px 1px 2px;
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-start;
   align-items: center;
 }
 .perfilFoto {
   width: 3.5em;
   display: block;
+  padding: 0 1.5em;
 }
